--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --colors",
+    "start": "./node_modules/.bin/babel-node app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -13,6 +14,18 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-dropzone": "^3.8.0",
+    "sha1": "^1.1.1",
+    "superagent": "^3.3.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "webpack": "^1.14.0"
   }
 }
