--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --colors",
-    "start": "./node_modules/.bin/babel-node app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
