--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "path": "^0.12.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.8.0",
+    "serve-favicon": "~2.3.0",
     "sha1": "^1.1.1",
     "superagent": "^3.3.1"
   },
