--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "superagent": "^3.3.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.14.0",
-    "babel-cli": "^6.6.5",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
+    "react-transform-hmr": "^1.0.4",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
-    "cross-env": "^3.1.3",
+    "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   }
