--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ],
+  "presets": ["es2015", "react", "stage-0"],
   "env": {
     "development": {
       "plugins": [["react-transform", {
