--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
     "development": {
       "plugins": [["react-transform", {
         "transforms": [{
-          "transform": "react-transform-hmr",
+          "transform": "react-hmr",
           "imports": ["react"],
           "locals": ["module"]
         }]
